Kubernetess/exam.yml
apiVersion: v1
kind: Namespace
metadata:
  name: exam1
  labels:
    name: exam1
